Changelog for ETL-Yertl

0.028     2016-10-09 23:08:36-05:00 America/Chicago

    [Added]

    - The YAML::Tiny module is now officially supported
    - The YERTL_FORMAT environment variable will set the default format
      that Yertl uses to communicate. Set it to `json` for Yertl to
      seamlessly interoperate with other JSON-based tools like `jq` and
      `recs`.
    - CSV conversion (`yto`/`yfrom`) now allows setting a delimiter so
      we can parse colon-separated values or esoteric formats

    [Fixed]

    - `yq -x` now checks for definedness before trying to print. This
      silences warnings from Perl about "Uninitialized value in print".
      In the future, we may re-enable warnings through a `-w` or `-v`
      switch.
    - If one filter in a pipe returns empty, that empty result is
      propagated through further filters. This makes the output of
      something like `select( .foo == 1 ) | .bar` more intuitive: If
      a document doesn't pass the first part, the result of the second
      part is `empty`, not `undef` (`--- ~`).
    - The `ysql` helpers and placeholders are now better documented in
      the ysql guide.

    [Other]

    - ygrok tests are now split into more maintainable chunks based on
      the patterns they are testing.

0.027 2015-11-28T09:19:23
 - use ipv4 and ipv6 patterns from Regexp::Common
 - update Path::Tiny version to fix File::Path issue
 - expand sql helpers docs to link related helpers
 - add the --delete helper option to ysql
 - return database handle from test setup function
 - change variable name in test
 - add release v0.026 announcement
 - fix commit urls in blog posts
 - fix release-blog script github URL

0.026 2015-11-25T03:41:56Z
 - add --order-by helper for ysql
 - add sortable field to ysql test
 - add --where helper for select queries
 - add --select and --insert query helpers to ysql
 - add flag to edit SQL query in text editor
 - deploy to personal site
 - redirect from github pages to personal site